# Restfully

./: ADVANCED.md  CMakeChecks.txt  CMakeLists.txt  LICENSE  README.md  TODO.md  library.properties
examples/ObjectOrientedRest/: Device.cpp  Device.h  ObjectOrientedRest.ino  Sensor.h
examples/SimpleRestServer/: SimpleRestServer.ino
examples/SimpleRestServerOTA/: SimpleRestServerOTA.ino
src/: Argument.h  CMakeLists.txt  Endpoints.cpp  Endpoints.h  Exception.cpp  Exception.h  Globals.cpp  HttpStatus.h  Link.h  Literal.h  Mixins.h  Name.h  Node.h  Parameter.h  Parser.h  Pool.cpp  Pool.h  Rest-Esp.h  Rest-Esp8266.h  Rest.cpp  Rest.h  RestTypes.h  Restfully.h  StringPool.cpp  StringPool.h  Token.h  Type.h  UriRequest.cpp  UriRequest.h  Variant.h  binbag.cpp  binbag.h  ds-config.h  handler.h  paged-pool.cc  paged-pool.h  pool.cc
src/bones/: Endpoints.cpp  Literal.h  Node.h
src/import/: pool.h
tests/: CMakeLists.txt
tests/basic/: Arguments.cc  CMakeLists.txt  HandlerTests.cpp  ParserTests.cpp  RestEndpointsTests.cpp  RestFunctionalTests.cpp  RestRequestTests.cpp  RestRequestVptrTests.cpp  RestTests.cpp  StringPoolTests.cpp  UriRequestTests.cpp  basic-tests.cc  basic-tests.cpp  binbag.cpp  pagedpool.cc  parser.cpp  pool-objects.cpp  requests.h  vptr-requests.h
tests/basic/bones/: CMakeTests.txt  RestRequestTests.cpp
tests/catch2/: update-catch
tests/common/: CMakeLists.txt  stress-tester.h  tests.cc  tests.h
